--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -75,7 +75,7 @@ body.loaded {
 
 @media screen and (max-width: 768px) {
   .section {
-    padding: 0 25px;
+    padding: 60px 25px;
   }
 }
 
